some fixes in search.js

--- a/public/app.css
+++ b/public/app.css
@@ -30,7 +30,7 @@ ul {
     margin-bottom:10px;
     margin-right: 10%;
     color: honeydew;
-    line-height:5px;
+    line-height:normal;
 
     
 }
