[wip] Rewriting into python

--- a/achoz/static/css/app.css
+++ b/achoz/static/css/app.css
@@ -1,5 +1,5 @@
 /*body {
-    background: url(/public/bg.jpg) no-repeat center center fixed; 
+    background: url(static/img/bg.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -11,7 +11,7 @@ html {
     scroll-behavior: smooth;
   }
 body {
-    background-image: url('/public/img/bg.svg');
+    background-image: url('/static/img/bg.svg');
     background-size: cover;
     background-attachment: fixed;
     
