--- a/achoz/static/css/app.css
+++ b/achoz/static/css/app.css
@@ -147,7 +147,16 @@ input:focus {
     margin-right: 10%;
     margin-left: 10%;
 }
-
+#query-info {
+    position: inherit;
+    margin-right: 10%;
+    margin-left: 10%;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    color: purple;
+    background-color: white;
+}
 .result-img {
     text-align: right;
     overflow: auto;
