--- a/achoz/static/css/app.css
+++ b/achoz/static/css/app.css
@@ -11,7 +11,6 @@ html {
     scroll-behavior: smooth;
   }
 body {
-    background-image: url('/static/img/bg.svg');
     background-size: cover;
     background-attachment: fixed;
     
@@ -25,6 +24,10 @@ body {
     position: sticky;
     top: 0%;
     margin-left: 5%;
+}
+
+#logo {
+    text-align: center;
 }
 #achoz {
     display:flex;
